high contrast mode fix

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1731,6 +1731,7 @@ body.theme--light.theme--highcontrast #header #appmenu li a {
     opacity: 1;
     filter: invert(0);
 }
+
 body.theme--highcontrast #header #appmenu li a {
     opacity: 1;
     filter: invert(1);
@@ -1742,7 +1743,7 @@ body.theme--dark.theme--highcontrast #header #appmenu li .icon-more-white {
     background-image: var(--icon-more-000);
 }
 body.theme--dark.theme--highcontrast #header .header-menu.unified-search a.header-menu__trigger,
-body.theme--dark.theme--highcontrast #header .notifications-button.hasNotifications {
+body.theme--highcontrast #header .notifications-button.hasNotifications {
     opacity: 1 !important;
 }
 body.theme--dark.theme--highcontrast #header #appmenu li:hover a,
